# Silmir-translator

./: Dockerfile  README.md  docker-compose.yml  opa.env  pyproject.toml
