[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silmirbot"
version = "1.0.0"
description = "Telegram bot that translates Russian text to Sil'mir"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.10,<4",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
